feat: Dynamic Media Gallery追加とUI改善
- Dynamic Media Galleryを新規追加
  - Node.jsベースのメディアファイルスキャナー実装
  - グリッド/リスト表示切替、検索、ライトボックス機能
  - backend/server.jsでメディアファイルを動的に配信
- KAMUI OSのサイドバータイトルを白文字に変更（ダークモード対応）
- 個人情報を含むパスを汎用的なものに変更
- 不要なファイルを削除してプロジェクト構造を整理
- .env.sampleファイルを追加

--- a/data/sections.yaml
+++ b/data/sections.yaml
@@ -86,6 +86,42 @@
       }
     </style>
     
+    <!-- ダッシュボードセクション -->
+    <div class="dashboard-sections">
+      <h2 class="dashboard-section-title">ダッシュボード</h2>
+      <div class="dashboard-links">
+        <a href="#" class="saas-app-card" onclick="window.location.hash=''; location.reload(); return false;">
+          <div class="saas-app-title">
+            メインダッシュボード
+            <span class="saas-app-arrow">→</span>
+          </div>
+          <div class="saas-app-description">
+            全体のダッシュボード - 各セクションへのエントリーポイント
+          </div>
+          <div class="saas-app-features">
+            • 要件定義・開発<br>
+            • メディアエディタ<br>
+            • 事業構築・ビジネスツール
+          </div>
+        </a>
+        
+        <a href="#dynamic-media-gallery" class="saas-app-card" onclick="showSectionById('dynamic-media-gallery'); return false;">
+          <div class="saas-app-title">
+            Dynamic Media Gallery
+            <span class="saas-app-arrow">→</span>
+          </div>
+          <div class="saas-app-description">
+            メディアファイルを動的にスキャンして表示するギャラリー
+          </div>
+          <div class="saas-app-features">
+            • ファイル自動スキャン<br>
+            • グリッド/リスト表示<br>
+            • ライトボックス対応
+          </div>
+        </a>
+      </div>
+    </div>
+    
     <!-- 要件定義・開発セクション -->
     <div class="dashboard-sections">
       <h2 class="dashboard-section-title">要件定義・開発</h2>
